Stijlgids_Last_version

--- a/Stijlgids.html
+++ b/Stijlgids.html
@@ -11,67 +11,74 @@
 
 <body>
 
-<h1>Style Guide</h1>
+<h1>Stijlgids</h1>
 <!-- COLOR PALETTE -->
 <h2>Color Palette</h2>
 <div class="color-palette">
   <div class="color-palette__item_main">
     <div class="color-palette__color">
     </div>
-    <p>#3498db</p>
+    <p>#8155BA</p>
   </div>
   <div class="color-palette__item_second">
     <div class="color-palette__color">
     </div>
-    <p>#2980b9</p>
+    <p>#DB86B7</p>
   </div>
   <div class="color-palette__item_system_colors_1">
     <div class="color-palette__color">
     </div>
-    <p>#34495e</p>
+    <p>#D1B1C2</p>
   </div>
   <div class="color-palette__item_system_colors_2">
     <div class="color-palette__color">
     </div>
-    <p>#2ecc71</p>
+    <p>#EFDCF9</p>
   </div>
   <div class="color-palette__item_system_colors_3">
     <div class="color-palette__color">
     </div>
-    <p>#f1c40f</p>
+    <p>#333E42</p>
   </div>
   <div class="color-palette__item_system_colors_4">
     <div class="color-palette__color">
     </div>
-    <p>Kleur(hex code)</p>
+    <p>#C163FE</p>
   </div>
   <div class="color-palette__item_system_colors_5">
     <div class="color-palette__color">
     </div>
-    <p>Kleur(hex code)</p>
+    <p>#8870BD</p>
   </div>
   <div class="color-palette__item_system_colors_6">
     <div class="color-palette__color">
     </div>
-    <p>Kleur(hex code)</p>
+    <p>#5F3659</p>
   </div>
 
 </div>
 
     <h2>Fonts</h2>
-    <p>The primary font used on this website is <a href="https://fonts.google.com/specimen/Open+Sans">'Open Sans'</a>.</p>
-    <h2>Headings</h2>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
+    <p class="FirstFont">The primary font used on this website are <a href="https://fonts.google.com/specimen/Open+Sans">'Euclid Flex'
+    </a>.</p>
+    <p class="SecFont">The primary font used on this website are <a href="https://www.behance.net/gallery/19360047/Voga-typeface">'Voga'
+    </a>.</p>
+    <p class="ThirdFont">The primary font used on this website are <a href="https://fontzone.net/font-details/felix-titling">'Felix Titling'
+    </a>.</p>
+
+    <h1>Headings</h1>
+    <h2>Heading 1</h2>
+    <h3>Heading 2</h3>
+    <h4>Heading 3</h4>
    
     <h2>Buttons</h2>
     <a href="#" class="btn">Button</a>
     <h2>Links</h2>
-    <a href="#">Link</a>
+    <a href="https://www.inschrijveninbrussel.be/">Link</a>
     <h2>Icons</h2>
     <svg class="icon">
-      <use xlink:href="path/to/icon.svg#icon-name"></use>
+      <img src="/Logo_smartschool.png" alt="">
+      <a href="https://sint-jan-brussel.smartschool.be/login"><img src="/Logo_smartschool.png" alt=""></a>
     </svg>
 </body>
 </html>
