--- a/BerkayUnutkan/inschrijvingen.html
+++ b/BerkayUnutkan/inschrijvingen.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style_berkay.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="header">
+            <div class="logo">
+            <img src="images/" alt="">
+            </div>
+            <div class="navigation">
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
