--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -9,7 +9,21 @@
 </head>
 <body>
     <nav>
-    sf
+        <div class="image">
+            <img src="/images/logo_navy_blue.png" alt="logo_navy_blue">
+        </div>
+        <div class="boxContainer">
+            <table class="elementscontainer">
+                <tr>
+                    <td>
+                        <input type="text" placeholder="Zoeken" class="search">
+                    </td>
+                    <td>
+                        <a href="#"><img src="/images/icons8-search.svg" alt=""></a>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </nav>
     <div class="container">
         
