--- a/NelleFavoreel/contact.html
+++ b/NelleFavoreel/contact.html
@@ -6,5 +6,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="locatie">
+			<h3>Sint-Jan Berchmanscollege</h3>
+			<h3>Ursulinenstraat 4</h3>
+			<h3>1000 Brussel België</h3>
+		</div>
+		<div class="tel">
+			<h3>Tel.: 02/512 03 70</h3>
+		</div>
+	</body>
 </html>
