--- a/BerkayUnutkan/inschrijvingen.html
+++ b/BerkayUnutkan/inschrijvingen.html
@@ -9,14 +9,25 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="header">
-            <div class="logo">
-            <img src="images/" alt="">
-            </div>
-            <div class="navigation">
-
-            </div>
+        <div class="navbar">
+        <div class="logo">
+           <a href="index.html"><img src="/images/logo_navy_blue.png"></a> 
         </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="menus.html">MENU</a></li>
+                <li><a href="reservatie.html">RESERVATIE</a></li>
+                <li><a href="Contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
+    </div> 
     </div>
+    </div>
+    <section class="menus"> 
+        <div class="small-container">
+            <h2 class="title">Inschrijvingen</h2>
+        </div>
+     </section>
 </body>
 </html>
