--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -10,19 +10,21 @@
 <body>
     <nav>
         <div class="image">
-            <img src="/images/logo_navy_blue.png" alt="logo_navy_blue">
+            <a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue"></a>
+            <div class="txtI">
+                <p>Sint-Jan Berchmanscollege</p>
+            </div>
         </div>
-        <div class="boxContainer">
-            <table class="elementscontainer">
-                <tr>
-                    <td>
-                        <input type="text" placeholder="Zoeken" class="search">
-                    </td>
-                    <td>
-                        <a href="#"><img src="/images/icons8-search.svg" alt=""></a>
-                    </td>
-                </tr>
-            </table>
+        <div class="rechts">
+            <div class="box">
+                <form>
+                    <input type="text" name="" placeholder="Typ hier...">
+                    <input type="submit" name="" value="Zoeken">
+                </form>
+            </div>
+            <div class="menu">
+                
+            </div>
         </div>
     </nav>
     <div class="container">
