--- a/NelleFavoreel/contact.html
+++ b/NelleFavoreel/contact.html
@@ -8,13 +8,35 @@
 		<link rel="stylesheet" href="style_Nelle.css" />
 	</head>
 	<body>
-		<div class="locatie">
-			<h3>Sint-Jan Berchmanscollege</h3>
-			<h3>Ursulinenstraat 4</h3>
-			<h3>1000 Brussel België</h3>
-		</div>
-		<div class="tel">
-			<h3>Tel.: 02/512 03 70</h3>
+		<nav>
+			<div class="image">
+				<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+				<div class="txtI">
+					<p>Sint-Jan Berchmanscollege</p>
+				</div>
+			</div>
+			<div class="rechts">
+				<div class="box">
+					<form>
+						<input type="text" name="" placeholder="Typ hier..." />
+						<input type="submit" name="" value="Zoeken" />
+					</form>
+				</div>
+				<div class="menu"></div>
+			</div>
+		</nav>
+		<div class="grid">
+			<div class="head">
+				<h1>Contact</h1>
+			</div>
+			<div class="locatie">
+				<h3>Sint-Jan Berchmanscollege</h3>
+				<h3>Ursulinenstraat 4</h3>
+				<h3>1000 Brussel België</h3>
+			</div>
+			<div class="tel">
+				<h3>Tel.: 02/512 03 70</h3>
+			</div>
 		</div>
 	</body>
 </html>
