--- a/NelleFavoreel/contact.html
+++ b/NelleFavoreel/contact.html
@@ -37,6 +37,14 @@
 			<div class="tel">
 				<h3>Tel.: 02/512 03 70</h3>
 			</div>
+			<div class="mail">
+				<h3>Secretariaat:</h3>
+				<h4>secretariaat@sint-jan-brussel.be</h4>
+				<h3>Directeur: DE DECKER Anne-Sophie:</h3>
+				<h4>adedecker@sint-jan-brussel.be</h4>
+				<h3>Adjunt-directuer: HARDING Neal:</h3>
+				<h4>nharding@sint-jan-brussel.be</h4>
+			</div>
 		</div>
 	</body>
 </html>
