--- a/NelleFavoreel/contact.html
+++ b/NelleFavoreel/contact.html
@@ -29,13 +29,22 @@
 			<div class="head">
 				<h1>Contact</h1>
 			</div>
+			<div class="locatieIcon">
+				<img src="/images/home.png" />
+			</div>
 			<div class="locatie">
 				<h3>Sint-Jan Berchmanscollege</h3>
 				<h3>Ursulinenstraat 4</h3>
 				<h3>1000 Brussel België</h3>
 			</div>
+			<div class="telIcon">
+				<img src="/images/call.png" />
+			</div>
 			<div class="tel">
 				<h3>Tel.: 02/512 03 70</h3>
+			</div>
+			<div class="mailIcon">
+				<img src="/images/mail.png" />
 			</div>
 			<div class="mail">
 				<h3>Secretariaat:</h3>
