--- a/NassimEjja/OverOns.html
+++ b/NassimEjja/OverOns.html
@@ -4,38 +4,64 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
 		<title>over ons</title>
 	</head>
 	<body>
-		<h1>Over ons</h1>
+		<div class="wrapper">
+			<h1>Over ons</h1>
 
-		<h2>Onze Historie</h2>
-		<h3>1540 - 1604</h3>
-		<p>
-			1540: erkenning van de Orde Paus Paulus III erkent officieel de religieuze
-			orde die Ignatius van Loyola kort daarvoor had opgericht: de Societas Jesu
-			(= S.J.).
-		</p>
-		<p>
-			1542-1585: vestigingen van de jezuïeten in de Nederlanden Twee jaar na de
-			officiële start van de Orde vestigen de jezuïeten zich ook in de
-			Nederlanden: Leuven (1542), Doornik (1554), Kamerijk en Antwerpen (1562),
-			Douai (1566), Sint-Omer (1567), Luik (1569), Brugge (1570), Maastricht
-			(1574), Rijsel (1578), Valenciennes (1581), Bergen en Kortrijk (1583),
-			Gent en Ieper (1585).
-		</p>
-		<p>
-			1586-1604: vestiging van de Orde in Brussel Enkele paters vestigen zich in
-			1586 in Brussel in het huis van Carolus Scribani, een jezuïet in
-			opleiding. In 1589 kunnen de paters het ‘Hof van Grimberghe’ aankopen,
-			gelegen tussen de Ruysbroeck-, de Stro- en de Goudstraat. Ze bouwen het
-			uit tot hun residentie en bereiden er de oprichting van een college voor.
-			1599: de Ratio studiorum In 1599 geeft de Orde de Ratio studiorum uit,
-			waarin de krijtlijnen van het Ignatiaans opvoedingsproject staan
-			uitgetekend. Vanaf nu hebben alle jezuïetencolleges waar ook ter wereld
-			een duidelijke leidraad. In 1625 wordt het document aangepast voor onze
-			contreien: Instructio pro scholis provinciae Flandro-Belgicae (‘Instructie
-			voor de scholen van de Diets-Nederlandse provincie’ttreza
-		</p>
+			<h2>Onze Historie</h2>
+			<h3>1540 - 1604</h3>
+
+			<div class="kolom">
+				<p>
+					1540: erkenning van de Orde Paus Paulus III erkent officieel de
+					religieuze orde die Ignatius van Loyola kort daarvoor had opgericht:
+					de Societas Jesu (= S.J.). 1542-1585: vestigingen van de jezuïeten in
+					de Nederlanden Twee jaar na de officiële start van de Orde vestigen de
+					jezuïeten zich ook in de Nederlanden: Leuven (1542), Doornik (1554),
+					Kamerijk en Antwerpen (1562), Douai (1566), Sint-Omer (1567), Luik
+					(1569), Brugge (1570), Maastricht (1574), Rijsel (1578), Valenciennes
+					(1581), Bergen en Kortrijk (1583), Gent en Ieper (1585).
+				</p>
+				<p>
+					1586-1604: vestiging van de Orde in Brussel Enkele paters vestigen
+					zich in 1586 in Brussel in het huis van Carolus Scribani, een jezuïet
+					in opleiding. In 1589 kunnen de paters het ‘Hof van Grimberghe’
+					aankopen, gelegen tussen de Ruysbroeck-, de Stro- en de Goudstraat. Ze
+					bouwen het uit tot hun residentie en bereiden er de oprichting van een
+					college voor. 1599: de Ratio studiorum In 1599 geeft de Orde de Ratio
+					studiorum uit, waarin de krijtlijnen van het Ignatiaans
+					opvoedingsproject staan uitgetekend. Vanaf nu hebben alle
+					jezuïetencolleges waar ook ter wereld een duidelijke leidraad. In 1625
+					wordt het document aangepast voor onze contreien: Instructio pro
+					scholis provinciae Flandro-Belgicae (‘Instructie voor de scholen van
+					de Diets-Nederlandse provincie’ttreza
+				</p>
+			</div>
+
+			<h3>1604 - 1700</h3>
+			<p>
+				1604: opening van het Regium Gymnasium Bruxellense Op 14 juli 1604 wordt
+				het Brusselse jezuïetencollege, gewijd aan de aartsengel Michiel,
+				plechtig geopend. Bij de start zijn er 400 leerlingen, in 1608 al 500.
+				In de beginfase van het college spelen twee rectoren een cruciale rol:
+				pater Thomas Sailly (1611-1614) en pater Carolus Scribani (1619-1625).
+			</p>
+			<p>
+				1606-1621-1660: bouw van een eigen kerk Al snel hebben de paters nood
+				aan een eigen kerk. In 1606 leggen de aartshertogen Albrecht en Isabella
+				de eerste steen van een kerk naar het ontwerp van broeder Hendrik
+				Hoeymaker. In 1621 wordt de kerk in aanwezigheid van de aartshertogen
+				ingewijd. In 1660 is ook de klokkentoren voltooid. 1640: de Orde viert
+				feest! Het honderdjarige bestaan van de Orde wordt ook in Brussel
+				uitbundig gevierd. Het feest wordt met grote pancartes in heel de stad
+				aangekondigd. 1695: bombardement door de Fransen In 1695 bombardeert het
+				leger van Lodewijk XIV Brussel. De stad (o.a. de Grote Markt) komt zwaar
+				gehavend uit de strijd, maar de collegegebouwen en de kerk zijn als bij
+				wonder gespaard gebleven.
+			</p>
+		</div>
 	</body>
 </html>
