--- a/BerkayUnutkan/inschrijvingen.html
+++ b/BerkayUnutkan/inschrijvingen.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div class="navbar">
         <div class="logo">
-           <a href="index.html"><img src="/images/logo_navy_blue.png"></a> 
+           <a href="/GloryMenga/home.html"><img src="/images/logo_navy_blue.png"></a> 
         </div>
         <nav>
             <ul>
@@ -23,10 +23,73 @@
         </nav>
     </div> 
     </div>
-    </div>
-    <section class="menus"> 
-        <div class="small-container">
-            <h2 class="title">Inschrijvingen</h2>
+    <!--main-->
+    <section class="main"> 
+        <div class="first-main">
+            <h1 class="title">Inschrijvingen</h1>
+        </div>
+        <div class="tekst">
+            <h2> Hoe schrijf je je kind in het 1ste leerjaar van een secundaire school in Brussel?</h2>
+            <h3> Welke kinderen moet je inschrijven?</h3>
+            <div class="inschrijvingen">
+            <div class="inschrijvingen-class">
+                <h4>1ste leerjaar A  (1A)</h4>
+                <p>Na de lagere school gaat je kind naar het 1ste leerjaar van het secundair onderwijs. 
+                   Je schrijft je kind in voor 1A of voor 1B. Je kind kan starten in het 1A als het een
+                   getuigschrift basisonderwijs heeft. Soms kan het ook naar 1A zonder getuigschrift basisonderwijs.</p>
+                <p>Weet je nog niet of je kind zal starten in 1A of in 1B? Dan kan je voor beide aanmelden.</p>
+                <a href="https://www.vlaanderen.be/onderwijs-en-vorming/secundair-onderwijs/de-1ste-graad-secundair-onderwijs">Meer informatie over 1A</a>
+            </div>
+            <div class="inschrijvingen-class">
+                <h4>1ste leerjaar B (1B)</h4>
+                <p>Na de lagere school gaat je kind naar het 1ste leerjaar van het secundair onderwijs. Je schrijft je kind in voor 1A of voor 1B. 
+                   Heeft je kind geen getuigschrift basisonderwijs? Dan kan je kind starten in 1B. 1B is voor jongeren die liever al doende leren 
+                   of voor jongeren met een leerachterstand.</p>
+                <p>Weet je nog niet of je kind zal starten in 1A of in 1B? Dan kan je voor beide aanmelden.</p>
+                <a href="https://www.vlaanderen.be/onderwijs-en-vorming/secundair-onderwijs/de-1ste-graad-secundair-onderwijs">Meer informatie over 1B</a>
+            </div>
+            <div class="inschrijvingen-class">
+                <h4>Van school veranderen</h4>
+                <p>Verandert je kind van school ...</p>
+                <li>Bij de start van een nieuw schooljaar? Dan moet je je kind opnieuw aanmelden, voor je het kunt inschrijven in een nieuwe school.</li>
+                <li>Tijdens het schooljaar? Contacteer dan de nieuwe school en vraag of er nog plaats is.</li>
+            </div>
+            <div class="foto-inschrijvingen">
+                <img src="/images/fotoinschrijvingen.JPG">
+            </div>
+        </div>
+        </div>
+        <div class="tekst2">
+            <h3> Hoe inschrijven?</h3>
+            <div class="inschrijvingen2">
+            <div class="inschrijvingen-class2">
+                <h4 class="stappen">  Stap 1: Bereid je voor</h4>
+                <p>Wil je je kind inschrijven in het 1ste leerjaar van een secundaire school voor het schooljaar 2023-2024?
+                     Dan moet je je kind altijd eerst aanmelden. Bereid je aanmelding goed voor:</p>
+                <ol>
+                    <li>Maak een lijstje met de scholen van je keuze.</li>
+                    <li>Informeer je over de procedure.</li>
+                    <li>Ga na of je kind voorrang heeft.</li>
+                    <li>Verzamel de nodige documenten.</li>
+                    <li>Bekijk het overzicht vrije plaatsen.</li>
+                </ol>
+                <a href="https://www.vlaanderen.be/onderwijs-en-vorming/secundair-onderwijs/de-1ste-graad-secundair-onderwijs">Meer informatie over 1A</a>
+            </div>
+            <div class="inschrijvingen-class2">
+                <h4>1ste leerjaar B (1B)</h4>
+                <p>Na de lagere school gaat je kind naar het 1ste leerjaar van het secundair onderwijs. Je schrijft je kind in voor 1A of voor 1B. 
+                   Heeft je kind geen getuigschrift basisonderwijs? Dan kan je kind starten in 1B. 1B is voor jongeren die liever al doende leren 
+                   of voor jongeren met een leerachterstand.</p>
+                <p>Weet je nog niet of je kind zal starten in 1A of in 1B? Dan kan je voor beide aanmelden.</p>
+                <a href="https://www.vlaanderen.be/onderwijs-en-vorming/secundair-onderwijs/de-1ste-graad-secundair-onderwijs">Meer informatie over 1B</a>
+            </div>
+            <div class="inschrijvingen-class2">
+                <h4>Van school veranderen</h4>
+                <p>Verandert je kind van school ...</p>
+                <li>Bij de start van een nieuw schooljaar? Dan moet je je kind opnieuw aanmelden, voor je het kunt inschrijven in een nieuwe school.</li>
+                <li>Tijdens het schooljaar? Contacteer dan de nieuwe school en vraag of er nog plaats is.</li>
+            </div>
+        </div>
         </div>
      </section>
 </body>
