--- a/NassimEjja/OverOns.html
+++ b/NassimEjja/OverOns.html
@@ -30,10 +30,14 @@
         </div>
      </section>
 	 <div class="historiek">
-		<h3>1540: erkenning van de Orde</h3>
-		<p>Paus Paulus III erkent officieel de religieuze orde die Ignatius van Loyola kort daarvoor had opgericht: de Societas Jesu (= S.J.).</p>
-		<h3>1542-1585: vestigingen van de jezuïeten in de Nederlanden</h3>
-		<p>Twee jaar na de officiële start van de Orde vestigen de jezuïeten zich ook in de Nederlanden: Leuven (1542), Doornik (1554), Kamerijk en Antwerpen (1562), Douai (1566), Sint-Omer (1567), Luik (1569), Brugge (1570), Maastricht (1574), Rijsel (1578), Valenciennes (1581), Bergen en Kortrijk (1583), Gent en Ieper (1585).</p>
+		<div class="histo">
+			<h3>1540: erkenning van de Orde</h3>
+			<p>Paus Paulus III erkent officieel de religieuze orde die Ignatius van Loyola kort daarvoor had opgericht: de Societas Jesu (= S.J.).</p>
+		
+			<h3>1542-1585: vestigingen van de jezuïeten in de Nederlanden</h3>
+			<p>Twee jaar na de officiële start van de Orde vestigen de jezuïeten zich ook in de Nederlanden: Leuven (1542), Doornik (1554), Kamerijk en Antwerpen (1562), Douai (1566), Sint-Omer (1567), Luik (1569), Brugge (1570), Maastricht (1574), Rijsel (1578), Valenciennes (1581), Bergen en Kortrijk (1583), Gent en Ieper (1585).</p>
+		
+		</div>
 	 </div>
 	</body>
 </html>
