--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -20,10 +20,18 @@
                  <div class="menu">
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Over ons</a></li>
+                        <li><a href="#">Over ons</a>
+                            <ul class="dropdown">
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Hvbvwome</a></li>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Hokgjdsmle</a></li>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">wcvxvc</a></li>
+                            </ul>
+                        </li>
                         <li><a href="#"> Organisatie</a></li>
                     </ul>
-                    
                 </div>
                 <div class="box">
                     <form>
@@ -31,7 +39,6 @@
                         <input type="submit" name="" value="Zoeken">
                     </form>
                 </div>
-                
             </div>
     </div>
     <div class="container">
