--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -22,23 +22,23 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Over ons</a>
                             <ul class="dropdown">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Hvbvwome</a></li>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Hokgjdsmle</a></li>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">wcvxvc</a></li>
+                                <li><a href="#">Opvoedingsproject</a></li>
+                                <li><a href="#">Schoolvisie</a></li>
+                                <li><a href="#">Historiek</a></li>
+                                <li><a href="#">Jan Berchmans</a></li>
+                                <li><a href="#">Motto</a></li>
+                                <li><a href="#">Jaarthema</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Organisatie</a>
                             <ul class="dropdown">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Hvbvwome</a></li>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Hokgjdsmle</a></li>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">wcvxvc</a></li>
-                                <li><a href="#">wcvxvc</a></li>
+                                <li><a href="#">Inschrijvingen</a></li>
+                                <li><a href="#">Schoolkosten</a></li>
+                                <li><a href="#">Studierichtingen</a></li>
+                                <li><a href="#">Privacybeleid</a></li>
+                                <li><a href="#">Wie is wie?</a></li>
+                                <li><a href="#">Leefregels</a></li>
+                                <li><a href="#">Vacatures</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Contact</a></li>
