--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -68,9 +68,17 @@
             </div>
         </div>
         <div class="blauw">
-            <div class="txtBlauw"></div>
-            <div class="txtBlauw"></div>
-            <div class="txtBlauw"></div>
+            <div class="txtB">
+                <div class="txtBlauw">
+                   
+                </div>
+                <div class="txtBlauw">
+
+                </div>
+                <div class="txtBlauw">
+
+                </div>
+            </div>
         </div>
     </footer>
 </body>
