--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -70,13 +70,18 @@
         <div class="blauw">
             <div class="txtB">
                 <div class="txtBlauw">
-                   
+                   <h1>Belangrijke info</h1>
+                   <p>Eerste schooldag</p>
+                   <p>Kalender</p>
+                   <p>Leertraject</p>
                 </div>
                 <div class="txtBlauw">
-
+                    <h1>Veelgestelde vragen</h1>
                 </div>
                 <div class="txtBlauw">
-
+                    <h1>Werken bij ons</h1>
+                    <p>Word leerkracht</p>
+                    <p>Alle Vacatures</p>
                 </div>
             </div>
         </div>
