--- a/NelleFavoreel/motto.html
+++ b/NelleFavoreel/motto.html
@@ -8,23 +8,55 @@
 		<link rel="stylesheet" href="style_Nelle3.css" />
 	</head>
 	<body>
-		<nav>
+		<div class="nav">
 			<div class="image">
 				<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
 				<div class="txtI">
 					<p>Sint-Jan Berchmanscollege</p>
 				</div>
 			</div>
+
 			<div class="rechts">
+				<div class="menu">
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li>
+							<a href="#">Over ons</a>
+							<ul class="dropdown">
+								<li><a href="#">Opvoedingsproject</a></li>
+								<li><a href="#">Schoolvisie</a></li>
+								<li><a href="#">Historiek</a></li>
+								<li><a href="#">Jan Berchmans</a></li>
+								<li><a href="#">Motto</a></li>
+								<li><a href="#">Jaarthema</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="#">Organisatie</a>
+							<ul class="dropdown">
+								<li><a href="#">Inschrijvingen</a></li>
+								<li><a href="#">Schoolkosten</a></li>
+								<li><a href="#">Studierichtingen</a></li>
+								<li><a href="#">Privacybeleid</a></li>
+								<li><a href="#">Wie is wie?</a></li>
+								<li><a href="#">Leefregels</a></li>
+								<li><a href="#">Vacatures</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Contact</a></li>
+						<div class="svg">
+							<a href="#"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
+						</div>
+					</ul>
+				</div>
 				<div class="box">
 					<form>
 						<input type="text" name="" placeholder="Typ hier..." />
 						<input type="submit" name="" value="Zoeken" />
 					</form>
 				</div>
-				<div class="menu"></div>
 			</div>
-		</nav>
+		</div>
 		<div class="grid">
 			<div class="tekst">
 				<div class="head">
@@ -38,5 +70,49 @@
 				<img src="/images/groepsfoto.jpeg" />
 			</div>
 		</div>
+		<footer>
+			<div class="foot">
+				<div class="kader">
+					<h1>Sint-Jan Berchmanscollege</h1>
+					<div class="icons">
+						<div class="icon">
+							<img src="/images/call.png" alt="call" />
+						</div>
+						<p>02/5120370</p>
+					</div>
+					<div class="icons">
+						<div class="icon">
+							<img src="/images/location.png" alt="call" />
+						</div>
+						<p>Rue des Ursulines 4 1000 Bruxelles</p>
+					</div>
+					<div class="icons">
+						<div class="icon">
+							<img src="/images/mail.png" alt="call" />
+						</div>
+						<p>secretariaat@sint-jan-brussel.be</p>
+					</div>
+				</div>
+				<div class="wit"></div>
+			</div>
+			<div class="blauw">
+				<div class="txtB">
+					<div class="txtBlauw">
+						<h1>Belangrijke info</h1>
+						<a href="#"><p>Eerste schooldag</p></a>
+						<a href="#"><p>Kalender</p></a>
+						<a href="#"><p>Leertraject</p></a>
+					</div>
+					<div class="txtBlauw">
+						<h1>Veelgestelde vragen</h1>
+					</div>
+					<div class="txtBlauw">
+						<h1>Werken bij ons</h1>
+						<a href="#"><p>Word leerkracht</p></a>
+						<a href="#"><p>Alle Vacatures</p></a>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
