--- a/GloryMenga/Opvoedings.html
+++ b/GloryMenga/Opvoedings.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style_Home_Glory.css">
+    <link rel="stylesheet" href="style_Opvoedingsproject_Glory.css">
     <title>Sint-Jan Berchmanscollege Brussel</title>
+    <title>Document</title>
 </head>
 <body>
     <!--Nav-->
@@ -59,19 +60,8 @@
         </div>
     </div>
     <!--Nav-->
-    <div class="container">
-        <div class="home">
-            <div class="txtS">
-                <h1>Maak de goeie keuze en kies voor onze school.</h1>
-            </div>
-            <div class="school">
-                <a href="#"><div class="btn">Kleuter / Lager School</div></a>
-                <a href="#"><div class="btn1">Secundaire School</div></a>
-            </div>
-        </div>
-        <div class="poster">
-            <img src="/images/Opendeurdag_2023.png" alt="">
-        </div>
+    <div class="container">  
+        
     </div>
     <!--Footer-->
     <footer>
