--- a/GloryMenga/Opvoedings.html
+++ b/GloryMenga/Opvoedings.html
@@ -61,7 +61,22 @@
     </div>
     <!--Nav-->
     <div class="container">  
-        
+        <div class="Opvoeding">
+            <div class="OP">
+                <h1>Opvoedingsproject</h1>
+                <p>Het opvoedingsproject van de Vlaamse jezuïetencolleges is gebaseerd op 10 bewegingen die engagement en dynamiek 
+                    uitdrukken en een leidraad vormen voor pedagogisch handelen. Deze bewegingen zijn geworteld in het christelijk 
+                    humanisme en in het charisma van Ignatius van Loyola. Het project moedigt iedereen aan om op een eigen manier en 
+                    vanuit een persoonlijke betrokkenheid een bijdrage te leveren. De bewegingen zijn genoemd met werkwoorden en uitdrukkingen 
+                    uit de Ignatiaanse traditie.</p>
+            </div>
+            <div class="fotoOP">
+                <img src="/images/Ignatius.jpg" alt="Ignatius">
+            </div>
+        </div>
+        <div class="stappen">
+            <h1></h1>
+        </div>
     </div>
     <!--Footer-->
     <footer>
@@ -78,7 +93,7 @@
                     <div class="icon">
                         <img src="/images/location.png" alt="call">
                     </div>
-                    <p>Rue des Ursulines 4 1000 Bruxelles</p>
+                    <p>Ursulinenstraat 4 1000 Bruxelles</p>
                 </div>
                 <div class="icons">
                     <div class="icon">
