--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -88,7 +88,7 @@
                     <div class="icon">
                         <img src="/images/location.png" alt="call">
                     </div>
-                    <p>Rue des Ursulines 4 1000 Bruxelles</p>
+                    <p>Ursulinenstraat 4 1000 Bruxelles</p>
                 </div>
                 <div class="icons">
                     <div class="icon">
