--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -45,7 +45,7 @@
                             </li>
                             <li><a href="#">Contact</a></li>
                             <div class="svg">
-                                <a href="#"><img src="/images/smartschool_app_icon.svg" alt="smartschool"></a>
+                                <a href="https://sint-jan-brussel.smartschool.be/login" target="_blank"><img src="/images/smartschool_app_icon.svg" alt="smartschool"></a>
                             </div>
                         </ul>
                     </div>
@@ -65,8 +65,8 @@
                 <h1>Maak de goeie keuze en kies voor onze school.</h1>
             </div>
             <div class="school">
-                <a href="#"><div class="btn">Kleuter / Lager School</div></a>
-                <a href="#"><div class="btn1">Secundaire School</div></a>
+                <a href="https://www.sjbbrussel.be/" target="_blank"><div class="btn">Kleuter / Lager School</div></a>
+                <a href="Home.html"><div class="btn1">Secundaire School</div></a>
             </div>
         </div>
         <div class="poster">
