--- a/BerkayUnutkan/wieiswie.html
+++ b/BerkayUnutkan/wieiswie.html
@@ -819,12 +819,15 @@
                         De organisatie heeft een verzekeringscontract afgesloten tot dekking van de burgerlijke aansprakelijkheid,
                         met uitzondering van de contractuele aansprakelijkheid, van de organisatie en de vrijwilliger. 
                         De polis van het verzekeringscontract ligt ter inzage op het schoolsecretariaat.
-                    </td>
-                    <td> <strong>Vrije Verzekering:</strong> 
+                        <br>
+                        <br>
+                        <strong>Vrije Verzekering:</strong> 
                         <br>
                         De organisatie heeft een verzekeringscontract afgesloten tot dekking van de burgerlijke aansprakelijkheid,
                         met uitzondering van de contractuele aansprakelijkheid, van de organisatie en de vrijwilliger. 
                         De polis van het verzekeringscontract ligt ter inzage op het schoolsecretariaat.
+                    </td>
+                    <td> 
                     </td>
                     </tr>
                   </table>
