--- a/GloryMenga/Opvoedings.html
+++ b/GloryMenga/Opvoedings.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_Opvoedingsproject_Glory.css">
     <title>Sint-Jan Berchmanscollege Brussel</title>
-    <title>Document</title>
 </head>
 <body>
     <!--Nav-->
@@ -41,7 +40,7 @@
                                     <li><a href="#">Privacybeleid</a></li>
                                     <li><a href="#">Wie is wie?</a></li>
                                     <li><a href="#">Leefregels</a></li>
-                                    <li><a href="#">Vacatures</a></li>
+                                    <li><a href="Vacatures.html">Vacatures</a></li>
                                 </ul>
                             </li>
                             <li><a href="#">Contact</a></li>
