--- a/GloryMenga/Vacatures.html
+++ b/GloryMenga/Vacatures.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style_Home_Glory.css">
+    <link rel="stylesheet" href="style_Vacatures_Glory.css">
     <title>Sint-Jan Berchmanscollege Brussel</title>
 </head>
 <body>
@@ -40,7 +40,7 @@
                                     <li><a href="#">Privacybeleid</a></li>
                                     <li><a href="#">Wie is wie?</a></li>
                                     <li><a href="#">Leefregels</a></li>
-                                    <li><a href="Vacatures.html">Vacatures</a></li>
+                                    <li><a href="#">Vacatures</a></li>
                                 </ul>
                             </li>
                             <li><a href="#">Contact</a></li>
@@ -59,20 +59,7 @@
         </div>
     </div>
     <!--Nav-->
-    <div class="container">
-        <div class="home">
-            <div class="txtS">
-                <h1>Maak de goeie keuze en kies voor onze school.</h1>
-            </div>
-            <div class="school">
-                <a href="https://www.sjbbrussel.be/" target="_blank"><div class="btn">Kleuter / Lager School</div></a>
-                <a href="Home.html"><div class="btn1">Secundaire School</div></a>
-            </div>
-        </div>
-        <div class="poster">
-            <img src="/images/Opendeurdag_2023.png" alt="">
-        </div>
-    </div>
+    <div class="container"></div>
     <!--Footer-->
     <footer>
         <div class="foot">
@@ -103,10 +90,10 @@
         <div class="blauw">
             <div class="txtB">
                 <div class="txtBlauw">
-                   <h1>Belangrijke info</h1>
-                   <a href="#"><p>Eerste schooldag</p></a>
-                   <a href="#"><p>Kalender</p></a>
-                   <a href="#"><p>Leertraject</p></a>
+                <h1>Belangrijke info</h1>
+                <a href="#"><p>Eerste schooldag</p></a>
+                <a href="#"><p>Kalender</p></a>
+                <a href="#"><p>Leertraject</p></a>
                 </div>
                 <div class="txtBlauw">
                     <h1>Veelgestelde vragen</h1>
