--- a/NelleFavoreel/motto.html
+++ b/NelleFavoreel/motto.html
@@ -67,7 +67,7 @@
 				<h3>Als leerlingen deze basishouding aannemen, zijn ze dan niet al op weg om het verschil te maken in onze samenleving en “mensen van de verandering” te zijn?</h3>
 			</div>
 			<div class="foto">
-				<img src="/images/groepsfoto.jpeg" />
+				<img src="/images/overzicht.JPG" />
 			</div>
 		</div>
 		<footer>
