--- a/NelleFavoreel/janBerchmans.html
+++ b/NelleFavoreel/janBerchmans.html
@@ -8,52 +8,54 @@
 		<link rel="stylesheet" href="style_Nelle4.css" />
 	</head>
 	<body>
-		<div class="nav">
-			<div class="image">
-				<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
-				<div class="txtI">
-					<p>Sint-Jan Berchmanscollege</p>
+		<div class="top">
+			<div class="nav">
+				<div class="image">
+					<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+					<div class="txtI">
+						<p>Sint-Jan Berchmanscollege</p>
+					</div>
 				</div>
-			</div>
 
-			<div class="rechts">
-				<div class="menu">
-					<ul>
-						<li><a href="#">Home</a></li>
-						<li>
-							<a href="#">Over ons</a>
-							<ul class="dropdown">
-								<li><a href="#">Opvoedingsproject</a></li>
-								<li><a href="#">Schoolvisie</a></li>
-								<li><a href="#">Historiek</a></li>
-								<li><a href="#">Jan Berchmans</a></li>
-								<li><a href="#">Motto</a></li>
-								<li><a href="#">Jaarthema</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="#">Organisatie</a>
-							<ul class="dropdown">
-								<li><a href="#">Inschrijvingen</a></li>
-								<li><a href="#">Schoolkosten</a></li>
-								<li><a href="#">Studierichtingen</a></li>
-								<li><a href="#">Privacybeleid</a></li>
-								<li><a href="#">Wie is wie?</a></li>
-								<li><a href="#">Leefregels</a></li>
-								<li><a href="#">Vacatures</a></li>
-							</ul>
-						</li>
-						<li><a href="#">Contact</a></li>
-						<div class="svg">
-							<a href="#"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
-						</div>
-					</ul>
-				</div>
-				<div class="box">
-					<form>
-						<input type="text" name="" placeholder="Typ hier..." />
-						<input type="submit" name="" value="Zoeken" />
-					</form>
+				<div class="rechts">
+					<div class="menu">
+						<ul>
+							<li><a href="Home.html">Home</a></li>
+							<li>
+								<a href="#">Over ons</a>
+								<ul class="dropdown">
+									<li><a href="Opvoedings.html">Opvoedingsproject</a></li>
+									<li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
+									<li><a href="#">Historiek</a></li>
+									<li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
+									<li><a href="/NelleFavoreel/motto.html">Motto</a></li>
+									<li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
+								</ul>
+							</li>
+							<li>
+								<a href="#">Organisatie</a>
+								<ul class="dropdown">
+									<li><a href="#">Inschrijvingen</a></li>
+									<li><a href="#">Schoolkosten</a></li>
+									<li><a href="#">Studierichtingen</a></li>
+									<li><a href="#">Privacybeleid</a></li>
+									<li><a href="#">Wie is wie?</a></li>
+									<li><a href="#">Leefregels</a></li>
+									<li><a href="Vacatures.html">Vacatures</a></li>
+								</ul>
+							</li>
+							<li><a href="#">Contact</a></li>
+							<div class="svg">
+								<a href="https://sint-jan-brussel.smartschool.be/login" target="_blank"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
+							</div>
+						</ul>
+					</div>
+					<div class="box">
+						<form>
+							<input type="text" name="" placeholder="Typ hier..." />
+							<input type="submit" name="" value="Zoeken" />
+						</form>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -102,7 +104,7 @@
 						<div class="icon">
 							<img src="/images/location.png" alt="call" />
 						</div>
-						<p>Rue des Ursulines 4 1000 Bruxelles</p>
+						<p>Ursulinenstraat 4 1000 Bruxelles</p>
 					</div>
 					<div class="icons">
 						<div class="icon">
