wie is wie laatste design

--- a/BerkayUnutkan/inschrijvingen.html
+++ b/BerkayUnutkan/inschrijvingen.html
@@ -19,11 +19,11 @@
         <div class="rechts"> 
              <div class="menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Over ons</a>
+                    <li><a href="/GloryMenga/home.html">Home</a></li>
+                    <li><a href="/GloryMenga/home.html">Over ons</a>
                         <ul class="dropdown">
-                            <li><a href="#">Opvoedingsproject</a></li>
-                            <li><a href="#">Schoolvisie</a></li>
+                            <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
+                            <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
                             <li><a href="/NassimEjja/OverOns.html">Historiek</a></li>
                             <li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
                             <li><a href="/NelleFavoreel/motto.html">Motto</a></li>
@@ -43,7 +43,7 @@
                     </li>
                     <li><a href="#">Contact</a></li>
                     <div class="svg">
-                        <a href="#"><img src="/images/smartschool_app_icon.svg" alt="smartschool"></a>
+                        <a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool"></a>
                     </div>
                 </ul>
             </div>
