--- a/BerkayUnutkan/wieiswie.html
+++ b/BerkayUnutkan/wieiswie.html
@@ -59,7 +59,7 @@
     </div>
 
     <!--Schoolbestuur-->
-    <div class="container">
+    <div class="container2">
         <div class="hoofdtitel">
             <h1>Wie is Wie?</h1>
         </div>
@@ -70,33 +70,26 @@
         <table class="een">
             <tr>
               <th>Leden van de Raad van Bestuur:</th>
+              <th></th>
             </tr>
             <tr>
               <td>Joris Tiebout, voorzitter</td>
+              <td>Eddy Pauwels</td>
             </tr>
             <tr>
               <td>Eddy Van de Velde, afgevaardigd bestuurder </td>
+              <td>Herman De Cnijf </td>
             </tr>
             <tr>
               <td>Bart De Moor</td>
+              <td>Anne De Man-Baert</td>
             </tr>
             <tr>
                 <td> Goedele Wynants</td>
-              </tr>
-              <tr>
-                <td>Anne Louwagie </td>
-              </tr>
-              <tr>
                 <td>Katrien Leveugle</td>
               </tr>
               <tr>
-                <td>Anne De Man-Baert</td>
-              </tr>
-              <tr>
-                <td>Herman De Cnijf </td>
-              </tr>
-              <tr>
-                <td>Eddy Pauwels</td>
+                <td>Anne Louwagie </td>
               </tr>
            
           </table>
@@ -115,11 +108,11 @@
         
     <!--campusraad-->
     <div class="container">
-        <div class="subtitel">
+        <div class="subtitel2">
             <h2>Campusraad</h2>
         </div>
-        <div class="schoolbestuur">
-            <div class="schoolbestuurtekst">
+        <div class="schoolbestuur2">
+            <div class="schoolbestuurtekst2">
                 <p>De Raad van Bestuur is eindverantwoordelijke maar laat de operationele en uitvoerende aspecten van een aantal beleidsdomeinen zoals 
                     schoolorganisatie, pedagogisch beleid, personeelsbeleid, infrastructureel en financieel beleid voorbereidend bespreken in de Campusraden. 
                     De Raad van Bestuur toetst de voorstellen en beslissingen van de campusraden aan de strategische beleidskeuzes waarna de beslissingen bekrachtigd
@@ -130,7 +123,7 @@
                     redenen ook verbonden zijn aan verschillende scholen. In de Campusraad zetelen de directeur(s) van de school (scholen), de afgevaardigd bestuurder
                     en een andere bestuurder van de Raad van Bestuur alsook een aantal externen. </p>
             </div>
-        <table class="een">
+        <table class="twee">
             <tr>
               <th>Leden van de Campusraad:</th>
             </tr>
@@ -163,10 +156,10 @@
 
   <!--campusraad-->
   <div class="container">
-    <div class="subtitel">
+    <div class="subtitel3">
         <h2>Directie</h2>
     </div>
-    <div class="schoolbestuur">
+    <div class="schoolbestuur3">
     <table class="een">
         <tr>
           <th>Directeur</th>
@@ -545,7 +538,7 @@
             <h2>Ouderraad</h2>
         </div>
         <div class="schoolbestuur">
-        <table class="een">
+        <table class="ouderraad">
             <tr>
               <th>Leden van de Ouderraad:</th>
               <th></th>
@@ -839,7 +832,7 @@
             <div class="subtitel">
                 <h2>Beroepscommissie</h2>
             </div>
-            <div class="schoolbestuurtekst">
+            <div class="schoolbestuurtekst-beroep">
                 <p>Bij de voorzitter van het schoolbestuur kunnen de ouders, binnen de voorziene termijn, beroep aantekenen bij 
                     een definitieve uitsluiting van hun zoon of dochter uit de school en als ze niet akkoord gaan met de genomen
                     beslissing van de delibererende klasseraad op het einde van het schooljaar. De voorzitter zal dan een beroepscommissie
@@ -862,7 +855,7 @@
                 <div class="subtitel">
                     <h2>Zorgteam</h2>
                 </div>
-                <div class="schoolbestuurtekst">
+                <div class="schoolbestuurtekst-zorgteam">
                     <p>De coördinatie en de communicatie van het zorgbeleid op de school is in handen van het zorgteam. Aanspreekpunten is Mevr. Britta Kestemont.
                         <br>
                         <br>
