--- a/BerkayUnutkan/wieiswie.html
+++ b/BerkayUnutkan/wieiswie.html
@@ -42,7 +42,7 @@
                                 <li><a href="#">Vacatures</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="/NelleFavoreel/contact.html">Contact</a></li>
                         <div class="svg">
                             <a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool"></a>
                         </div>
@@ -64,7 +64,7 @@
             <h1>Wie is Wie?</h1>
         </div>
         <div class="subtitel">
-            <h2>Schoolbestuur</h2>
+          <h2>Schoolbestuur</h2>
         </div>
         <div class="schoolbestuur">
         <table class="een">
