--- a/BerkayUnutkan/inschrijvingen.html
+++ b/BerkayUnutkan/inschrijvingen.html
@@ -10,7 +10,7 @@
 <body>
     <div class="nav">
         <div class="image">
-            <a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue"></a>
+            <a href="/GloryMenga/home.html"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue"></a>
             <div class="txtI">
                 <p>Sint-Jan Berchmanscollege</p>
             </div>
