--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -69,8 +69,24 @@
                 <a href="Home.html"><div class="btn1">Secundaire School</div></a>
             </div>
         </div>
+        <div class="intro">
+            <div class="jan">
+                <h1>Sint-Jan Berchmanscollege</h1>
+                <p>Het Sint-Jan Berchmanscollege is een katholiek Vlaams jezuïetencollege in de Ursulinenstraat te Brussel, vlak bij de Kapellekerk en het station Brussel-Kapellekerk. Het college is genoemd naar de Vlaamse heilige Jan Berchmans en maakt deel uit van de Scholengemeenschap voor Katholiek Secundair Onderwijs Sint-Gorik.</p>
+                <p>De leuze van de school is Libenter ("graag!").</p>
+            </div>
+            <div class="main">
+                <img src="/images/school main.jpg" alt="schoolh main">
+            </div>
+        </div>
         <div class="poster">
-            <img src="/images/Opendeurdag_2023.png" alt="">
+            <img src="/images/Opendeurdag_2023.png" alt="Opendeurdag_2023">
+        </div>
+        <div class="einde">
+            <div class="block">
+                <p>Druk hier om je kind op onze school in te schrijven</p>
+                <a href="#">Inschrijven</a>
+            </div>
         </div>
     </div>
     <!--Footer-->
@@ -106,7 +122,7 @@
                    <h1>Belangrijke info</h1>
                    <a href="#"><p>Eerste schooldag</p></a>
                    <a href="#"><p>Kalender</p></a>
-                   <a href="#"><p>Leertraject</p></a>
+                   <a href="#"><p>Leefregels</p></a>
                 </div>
                 <div class="txtBlauw">
                     <h1>Veelgestelde vragen</h1>
