--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -27,7 +27,7 @@
 								<ul class="dropdown">
 									<li><a href="Opvoedings.html">Opvoedingsproject</a></li>
 									<li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
-									<li><a href="#">Historiek</a></li>
+									<li><a href="/NassimEjja/">Historiek</a></li>
 									<li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
 									<li><a href="/NelleFavoreel/motto.html">Motto</a></li>
 									<li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
@@ -36,11 +36,11 @@
 							<li>
 								<a href="#">Organisatie</a>
 								<ul class="dropdown">
-									<li><a href="#">Inschrijvingen</a></li>
+									<li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
 									<li><a href="#">Schoolkosten</a></li>
 									<li><a href="#">Studierichtingen</a></li>
 									<li><a href="#">Privacybeleid</a></li>
-									<li><a href="#">Wie is wie?</a></li>
+									<li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
 									<li><a href="#">Leefregels</a></li>
 									<li><a href="Vacatures.html">Vacatures</a></li>
 								</ul>
