--- a/NelleFavoreel/motto.html
+++ b/NelleFavoreel/motto.html
@@ -44,7 +44,7 @@
 									<li><a href="Vacatures.html">Vacatures</a></li>
 								</ul>
 							</li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="/NelleFavoreel/contact.html">Contact</a></li>
 							<div class="svg">
 								<a href="https://sint-jan-brussel.smartschool.be/login" target="_blank"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
 							</div>
