--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -20,35 +20,35 @@
                 
                 <div class="rechts"> 
                     <div class="menu">
-                        <ul>
-                            <li><a href="Home.html">Home</a></li>
-                            <li><a href="#">Over ons</a>
-                                <ul class="dropdown">
-                                    <li><a href="Opvoedings.html">Opvoedingsproject</a></li>
-                                    <li><a href="#">Schoolvisie</a></li>
-                                    <li><a href="#">Historiek</a></li>
-                                    <li><a href="#">Jan Berchmans</a></li>
-                                    <li><a href="#">Motto</a></li>
-                                    <li><a href="#">Jaarthema</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Organisatie</a>
-                                <ul class="dropdown">
-                                    <li><a href="#">Inschrijvingen</a></li>
-                                    <li><a href="#">Schoolkosten</a></li>
-                                    <li><a href="#">Studierichtingen</a></li>
-                                    <li><a href="#">Privacybeleid</a></li>
-                                    <li><a href="#">Wie is wie?</a></li>
-                                    <li><a href="#">Leefregels</a></li>
-                                    <li><a href="Vacatures.html">Vacatures</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Contact</a></li>
-                            <div class="svg">
-                                <a href="https://sint-jan-brussel.smartschool.be/login" target="_blank"><img src="/images/smartschool_app_icon.svg" alt="smartschool"></a>
-                            </div>
-                        </ul>
-                    </div>
+                       <ul>
+                           <li><a href="/GloryMenga/home.html">Home</a></li>
+                           <li><a href="/GloryMenga/home.html">Over ons</a>
+                               <ul class="dropdown">
+                                   <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
+                                   <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
+                                   <li><a href="/NassimEjja/OverOns.html">Historiek</a></li>
+                                   <li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
+                                   <li><a href="/NelleFavoreel/motto.html">Motto</a></li>
+                                   <li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
+                               </ul>
+                           </li>
+                           <li><a href="#">Organisatie</a>
+                               <ul class="dropdown">
+                                   <li><a href="inschrijvingen.html">Inschrijvingen</a></li>
+                                   <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
+                                   <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
+                                   <li><a href="#">Privacybeleid</a></li>
+                                   <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
+                                   <li><a href="#">Leefregels</a></li>
+                                   <li><a href="/GloryMenga/Vacatures.html">Vacatures</a></li>
+                               </ul>
+                           </li>
+                           <li><a href="/NelleFavoreel/contact.html">Contact</a></li>
+                           <div class="svg">
+                               <a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool"></a>
+                           </div>
+                       </ul>
+                   </div>
                     <div class="box">
                         <form>
                             <input type="text" name="" placeholder="Typ hier...">
@@ -69,9 +69,24 @@
                 <a href="Home.html"><div class="btn1">Secundaire School</div></a>
             </div>
         </div>
-        <div class="poster">
-            <img src="/images/Opendeurdag_2023.png" alt="">
+        <div class="intro">
+            <div class="jan">
+                <h1>Sint-Jan Berchmanscollege</h1>
+                <p>Het Sint-Jan Berchmanscollege is een katholiek Vlaams jezuïetencollege in de Ursulinenstraat te Brussel, vlak bij de Kapellekerk en het station Brussel-Kapellekerk. Het college is genoemd naar de Vlaamse heilige Jan Berchmans en maakt deel uit van de Scholengemeenschap voor Katholiek Secundair Onderwijs Sint-Gorik.</p>
+                <p>De leuze van de school is Libenter ("graag!").</p>
+            </div>
+            <div class="main">
+                <img src="/images/school main.jpg" alt="schoolh main">
+            </div>
         </div>
+        <div class="poster">
+            <img src="/images/Opendeurdag_2023.png" alt="Opendeurdag_2023">
+        </div>
+        <div class="einde">
+            <div class="block">
+                <p>Druk hier om je kind op onze school in te schrijven</p>
+                <a href="#">Inschrijven</a>
+            </div>
     </div>
     <!--Footer-->
     <footer>
