--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,39 +18,37 @@
 					</div>
 				</div>
 
-				<div class="rechts">
-					<div class="menu">
-						<ul>
-							<li><a href="Home.html">Home</a></li>
-							<li>
-								<a href="#">Over ons</a>
-								<ul class="dropdown">
-									<li><a href="Opvoedings.html">Opvoedingsproject</a></li>
-									<li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
-									<li><a href="/NassimEjja/">Historiek</a></li>
-									<li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
-									<li><a href="/NelleFavoreel/motto.html">Motto</a></li>
-									<li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
-								</ul>
-							</li>
-							<li>
-								<a href="#">Organisatie</a>
-								<ul class="dropdown">
-									<li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
-									<li><a href="#">Schoolkosten</a></li>
-									<li><a href="#">Studierichtingen</a></li>
-									<li><a href="#">Privacybeleid</a></li>
-									<li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-									<li><a href="#">Leefregels</a></li>
-									<li><a href="Vacatures.html">Vacatures</a></li>
-								</ul>
-							</li>
-							<li><a href="/NelleFavoreel/contact.html">Contact</a></li>
-							<div class="svg">
-								<a href="https://sint-jan-brussel.smartschool.be/login" target="_blank"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
-							</div>
-						</ul>
-					</div>
+				<div class="rechts"> 
+                    <div class="menu">
+                       <ul>
+                           <li><a href="/GloryMenga/home.html">Home</a></li>
+                           <li><a href="/GloryMenga/home.html">Over ons</a>
+                               <ul class="dropdown">
+                                   <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
+                                   <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
+                                   <li><a href="/NassimEjja/OverOns.html">Historiek</a></li>
+                                   <li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
+                                   <li><a href="/NelleFavoreel/motto.html">Motto</a></li>
+                                   <li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
+                               </ul>
+                           </li>
+                           <li><a href="#">Organisatie</a>
+                               <ul class="dropdown">
+                                   <li><a href="inschrijvingen.html">Inschrijvingen</a></li>
+                                   <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
+                                   <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
+                                   <li><a href="#">Privacybeleid</a></li>
+                                   <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
+                                   <li><a href="#">Leefregels</a></li>
+                                   <li><a href="#">Vacatures</a></li>
+                               </ul>
+                           </li>
+                           <li><a href="/NelleFavoreel/contact.html">Contact</a></li>
+                           <div class="svg">
+                               <a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool"></a>
+                           </div>
+                       </ul>
+                   </div>
 					<div class="box">
 						<form>
 							<input type="text" name="" placeholder="Typ hier..." />
