--- a/NelleFavoreel/jaarthema.html
+++ b/NelleFavoreel/jaarthema.html
@@ -35,7 +35,7 @@
 							<li>
 								<a href="#">Organisatie</a>
 								<ul class="dropdown">
-									<li><a href="inschrijvingen.html">Inschrijvingen</a></li>
+									<li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
 									<li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
 									<li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
 									<li><a href="#">Privacybeleid</a></li>
