--- a/BerkayUnutkan/wieiswie.html
+++ b/BerkayUnutkan/wieiswie.html
@@ -77,7 +77,7 @@
               <td>Eddy Pauwels</td>
             </tr>
             <tr>
-              <td>Eddy Van de Velde, afgevaardigd bestuurder </td>
+              <td>Eddy Van de Velde</td>
               <td>Herman De Cnijf </td>
             </tr>
             <tr>
