--- a/NordineElOuafrasi/Studierichtingen/derde_graad.html
+++ b/NordineElOuafrasi/Studierichtingen/derde_graad.html
@@ -21,7 +21,10 @@
         <li><a href="/NordineElOuafrasi/Studierichtingen/ws_wis.html">Wetenschappen-Wiskunde</a></li>
         <li><a href="/NordineElOuafrasi/Studierichtingen/mt-wis.html">Moderne talen-Wiskunde</a></li>
 
+        <!--Zie CSS-->
+
     </ul>
+
 
 
         
