--- a/NordineElOuafrasi/Studierichtingen/eerste_graad.html
+++ b/NordineElOuafrasi/Studierichtingen/eerste_graad.html
@@ -337,5 +337,6 @@ Hierbij kunnen verschillende thema's aan bod komen. Onderzoekend leren is belang
         Ze gebruiken hun kennis over taal, cultuur en kunst om beter inzicht te krijgen in de waarden, geschiedenis en maatschappij van Grieken en Romeinen. 
         Ze krijgt inzicht in de invloed van Grieks-Romeinse beschaving en klassieke talen op de hedendaagse culturen. 
     </p>
+     <!--Zie CSS-->
 </body>
 </html>
