--- a/NordineElOuafrasi/Studierichtingen/studieaanbod.html
+++ b/NordineElOuafrasi/Studierichtingen/studieaanbod.html
@@ -12,5 +12,6 @@
     <a href="/NordineElOuafrasi/Studierichtingen/eerste_graad.html">Eerste graad</a>
     <a href="/NordineElOuafrasi/Studierichtingen/tweede_graad.html">Tweede graad</a>
     <a href="/NordineElOuafrasi/Studierichtingen/derde_graad.html">Derde graad graad</a>
+ <!--Zie CSS-->
 </body>
 </html>
