--- a/NordineElOuafrasi/Studierichtingen/tweede_graad.html
+++ b/NordineElOuafrasi/Studierichtingen/tweede_graad.html
@@ -17,6 +17,7 @@
         <li><a href="/NordineElOuafrasi/Studierichtingen/nw.html">Natuurwetenschappen</a></li>
         <li><a href="/NordineElOuafrasi/Studierichtingen/Moderne_talen.html">Moderne talen</a></li>
     </ul>
+     <!--Zie CSS-->
    
 
 
