--- a/NelleFavoreel/motto.html
+++ b/NelleFavoreel/motto.html
@@ -60,13 +60,14 @@
 			</div>
 		</div>
 		<div class="grid">
-			<div class="tekst">
-				<div class="head">
-					<h1>Motto - Libenter</h1>
-				</div>
-				<h3>Het motto van ons college is “libenter !” of “graag”. Wanneer iemand je iets vraagt, is het altijd fijner als iemand je echt van harte, met plezier wil helpen. (libenter!)</h3>
-				<h3>Hierdoor zal de solidariteit en verbondenheid met je medemens toenemen, omdat je elkaar helpt vanuit een zekere onbaatzuchtigheid.</h3>
-				<h3>Als leerlingen deze basishouding aannemen, zijn ze dan niet al op weg om het verschil te maken in onze samenleving en “mensen van de verandering” te zijn?</h3>
+			<div class="head">
+				<h1>Motto - Libenter</h1>
+			</div>
+			<div class="text">
+				<h3>
+					Het motto van ons college is “libenter !” of “graag”. Wanneer iemand je iets vraagt, is het altijd fijner als iemand je echt van harte, met plezier wil helpen. (libenter!) <br />Hierdoor zal de solidariteit en verbondenheid met je medemens
+					toenemen, omdat je elkaar helpt vanuit een zekere onbaatzuchtigheid. <br />Als leerlingen deze basishouding aannemen, zijn ze dan niet al op weg om het verschil te maken in onze samenleving en “mensen van de verandering” te zijn?
+				</h3>
 			</div>
 			<div class="foto">
 				<img src="/images/overzicht.JPG" />
