--- a/NelleFavoreel/schoolvisie.html
+++ b/NelleFavoreel/schoolvisie.html
@@ -72,6 +72,9 @@
 					graagte, libenter in het Latijn. We hopen dat onze leerlingen hier gaandeweg een voorbeeld aan zullen nemen: dat ze libenter bekwame, bewuste en bewogen jongvolwassenen mogen worden.
 				</p>
 			</div>
+			<div class="schoolvisieFoto">
+				<img src="/images/De_speelplaats_van_het_Sint-Jan_Berchmanscollege_(secundair_onderwijs,_middelbare_school)_in_de_Ursulinenstraat_tijdens_de_opendeurdag_van_12_oktober_2019_2_(c)_Peter_Dhondt-BRUZZ.jpeg" />
+			</div>
 			<div class="bekwaam">
 				<h1>Bekwaam</h1>
 				<p>
@@ -86,6 +89,9 @@
 					erin slagen die talenten te laten groeien. Doorheen hun schoolloopbaan leren we hen hiermee om te gaan: zo kan een taak als klasafgevaardigde in het 1e tot 6e jaar hun verantwoordelijkheidsgevoel aanscherpen. Zowel de organisatie van
 					evenementen met de leerlingenraad (2e en 3e graad) als het bepalen van het eigen evaluatietraject in de retorica zijn uitgelezen momenten om te leren omgaan met deze vrijheid en verantwoordelijkheid.
 				</p>
+			</div>
+			<div class="bekwaamFoto">
+				<img src="/images/honderddagen5-2018.jpeg" />
 			</div>
 			<div class="bewust">
 				<h1>Bewust</h1>
@@ -105,6 +111,9 @@
 					vinden ze de juiste toon om één te worden, in verscheidenheid.
 				</p>
 			</div>
+			<div class="bewustFoto">
+				<img src="/images/honderddagen7-2018.jpeg" />
+			</div>
 			<div class="bewogen">
 				<h1>Bewogen</h1>
 				<p>
@@ -119,6 +128,9 @@
 					zoeken in alles’ door hun perspectieven te openen en hun innerlijke stem te verfijnen. Sterke momenten waarop we samen rouwen om verlies, blije momenten waarbij we ons verheugen over Pasen of een proclamatie, laten we daarom niet
 					voorbijgaan zonder ook tijd te maken voor gebed of bezinning.
 				</p>
+			</div>
+			<div class="bewogenFoto">
+				<img src="/images/overzicht.JPG" />
 			</div>
 			<div class="totSlot">
 				<h1>Tot Slot</h1>
