--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style_Home_Glory.css" />
+		<script src="Search.js"></script>
 		<title>Sint-Jan Berchmanscollege Brussel</title>
 	</head>
 	<body>
@@ -51,7 +52,7 @@
                    </div>
 					<div class="box">
 						<form>
-							<input type="text" name="" placeholder="Typ hier..." />
+							<input type="text" name="" placeholder="Typ hier..."/>
 							<input type="submit" name="" value="Zoeken" />
 						</form>
 					</div>
